// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the AnalysisResult component matches the snapshot 1`] = `
<li
  className="sc-bwzfXH kGIHaC"
>
  <svg
    aria-hidden="true"
    className="sc-htpNat gvyGHY sc-ifAKCX gIfmeR"
    focusable="false"
    role="img"
  />
  <p
    className="sc-bxivhb aWDuI"
    dangerouslySetInnerHTML={
      Object {
        "__html": "You're doing great!",
      }
    }
  />
  <button
    aria-label="SEOResult"
    aria-pressed={true}
    className="sc-bdVaJa VNVFd"
    id="Result button"
    onClick={[Function]}
    type="button"
  >
    <svg
      aria-hidden="true"
      className="sc-EHOje cEzfCV"
      focusable="false"
      role="img"
    />
  </button>
</li>
`;

exports[`the AnalysisResult component with html in the text matches the snapshot 1`] = `
<li
  className="sc-bwzfXH kGIHaC"
>
  <svg
    aria-hidden="true"
    className="sc-htpNat gvyGHY sc-bZQynM jbcHwk"
    focusable="false"
    role="img"
  />
  <p
    className="sc-bxivhb aWDuI"
    dangerouslySetInnerHTML={
      Object {
        "__html": "You're doing <b>great!</b>",
      }
    }
  />
  <button
    aria-label="SEOResult"
    aria-pressed={true}
    className="sc-bdVaJa VNVFd"
    id="Result button"
    onClick={[Function]}
    type="button"
  >
    <svg
      aria-hidden="true"
      className="sc-gzVnrw dJVhwI"
      focusable="false"
      role="img"
    />
  </button>
</li>
`;
